# misc

./: .gitignore  .gitmodules  bench.h
LRU/: .gitignore  Makefile  Readme.md  display_csv.py  lru.cpp
Sequential and Parallel Algorithms and Data Structures/: Readme.md  common.h
Sequential and Parallel Algorithms and Data Structures/sorted_seqences/: Makefile  bst.h  test.cpp
Sequential and Parallel Algorithms and Data Structures/sorts/: .gitignore  (+4 more)
array_shift/: a.py
async-as-state-machine/: .gitignore  Cargo.toml
brainfuck/: Makefile  bf  main.cpp
color-palette-extractor/: main.py  pyproject.toml
disjoint_set/: Cargo.toml
fast-lowercase/: .gitignore  Makefile  Readme.md  lowercase.cpp
faster-lookup/: .gitignore  Makefile  Readme.md  display_res.py  main.cpp
feistel/: code.go
graph/: Cargo.toml  Readme.md
huffman/: Makefile  Readme.md  encode.cpp
io_uring-intro/: Makefile  main.c
learn_julia/: Readme.md  notebook.jl
lenses/: Cargo.toml
metropolis-hasting/: Readme.md  metropolis-hastling.py
mutex/: mutex.c
ode/: Readme.md  ode.jl
parsing/: .clangd  Makefile  Readme.md  input  parser.c  parser.cpp
perf/: Makefile  bench  main.cpp
recursive_computation_of_taylor_coefficients/: run.py
robinhash/: Cargo.toml
skiplist/: skiplist.cpp
soa-cpp/: Makefile  main.cpp
stat_monoid/: Readme.md  a.out  main.cpp  stat.h
string/: .gitignore  Makefile  compile_commands.json  main.cpp
symbolic-regression/: Cargo.toml  Readme.md
template/: Makefile
trig/: Cargo.toml  Readme.md
writev/: .clangd  .gitignore  Makefile  main.cpp
(+25 files in other folders)
