[project]
name = "misc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "imageio>=2.37.2",
    "matplotlib>=3.10.8",
    "opencv-python>=4.13.0.90",
    "pyqt6>=6.10.2",
    "scikit-image>=0.26.0",
    "scikit-learn>=1.8.0",
]
